# tippo

./: .gitignore  README.md  dune-project  tippo.opam
examples/: 1-starting-point.tippo  2-arithmetics.tippo  3-arithmetics-multiple.tippo  4-arithmetic-parentheses.tippo  starting-point.tippo
lib/: BinaryOperation.ml  TokenType.ml  ast.ml  compiler.ml  dune  exceptions.ml  lexer.ml  lexer.mli  location.ml  parser.ml  program.ml  register.ml  token.ml  type.ml  typechecker.ml  utils.ml
test/: dune
