(lang dune 3.10)

(name tippo)

(generate_opam_files true)

(source
 (github Maki325/tippo))

(authors "Maki325")

(maintainers "Maki325")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name tippo)
 (synopsis "A compiler, the end!")
 (description "A compiler, the end!")
 (depends ocaml dune)
 (tags (compiler)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
